# torrent-watch

./: .gitignore  flake.nix  pyproject.toml  readme.md  requirements.txt  shell.nix  torrent-watch.py  torrent_watch.py
