[tool.poetry]
name = "torrent-watch"
version = "1.0.0"
description = ""
readme = "readme.md"
license = "MIT"
authors = ["cromachina"]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "*"
httpx = "*"
lxml = "*"
PyYAML = "*"

[tool.poetry.scripts]
torrent-watch = "torrent_watch:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"