[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-watch"
version = "1.0.1"
description = ""
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "cromachina" }
]
requires-python = ">=3.13"
dependencies = [
    'beautifulsoup4',
    'httpx',
    'lxml',
    'PyYAML',
]

[project.scripts]
torrent-watch = "torrent_watch:main"
